refactor: remove useless code